--- a/templates/blog/post/list.html
+++ b/templates/blog/post/list.html
@@ -6,17 +6,37 @@
 {% block content %}
     <h1>My Blog</h1>
     
+    {% if tag %}
+        <h2>Posts tagged with "{{ tag.name }}"</h2>
+    {% endif%}
+
     {% for post in posts %}
+
         <h2>
             <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
         </h2>
+
+        <p class="tags">
+            Tags: 
+            {% for tag in post.tags.all %}
+                <a href="{% url "blog:post_list_by_tag" tag.slug %}">
+                    {{ tag.name }}
+                </a>
+                {% if not forloop.last %}, {% endif %}
+            {% endfor %}
+        </p>  
+
         <p class='date'>
             Published {{post.publish }} by {{ post.author }}
         </p>
+
         {{ post.body|truncatewords:30|linebreaks }}
     {% endfor %}
-      
-    {% include '_pagination.html' with page=page_obj %}
+    
+     <!--when using the function views-->
+    {% include '_pagination.html' with page=posts %}
     
 {% endblock %}
+ <!--when using class based views--> 
+    <!--{% include '_pagination.html' with page=page_obj %}-->
  
