sitemaps, feeds & solr haystack search

--- a/templates/blog/post/list.html
+++ b/templates/blog/post/list.html
@@ -1,5 +1,6 @@
 
 {% extends 'blog/__base.html' %}
+{% load blog_tags %}
 
 {% block title %}My Blog{% endblock  %}
 
@@ -30,7 +31,7 @@
             Published {{post.publish }} by {{ post.author }}
         </p>
 
-        {{ post.body|truncatewords:30|linebreaks }}
+        {{ post.body|markdown|truncatewords_html:30 }}
     {% endfor %}
     
      <!--when using the function views-->
